# candor

./: CHANGELOG.md  README.md  candorsetup.sh  pyproject.toml
candor/: cli.py  config.py  doctor.py  progress.py  reporting.py
candor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
candor/analysis/: analyzer.py  assess.py  attack_surface.py  confidence.py  model.py  pipeline.py  recommendations.py  reporting.py  signatures.py  state.py  summary_whois.py  workflows.py
candor/cases/demo/: case.json
candor/commands/: __init__.py  case.py  doctor.py  execute.py  explain.py  findings.py  help.py  jobs.py  metadata.py  report.py  workflow.py
candor/core/: case.py  controller.py  errors.py  executor.py  findings.py  history.py  intent.py  investigation.py  investigation_manager.py  job.py  logger.py  mitre.py  output.py  plan.py  result.py  timeline.py  validate.py
candor/explain/: __init__.py
candor/findings/: findings.json
candor/investigations/192.168.1.1/: nmap-port_scan.txt
candor/investigations/google.com/: metadata.json  nmap-scan-service.txt  timeline.json  whois-lookup.txt
candor/modules/: base.py  registry.py
candor/parser/: confidence.py  intent.py  natural_map.py  planner.py
candor/reporting/: __init__.py  rich.py  service.py
candor/shell/: execute.py
candor/workflows/: __init__.py  parallel.py  runner.py
tests/: conftest.py  golden_reporting.txt  test_base_module.py  test_execute_choices.py  test_output_message.py  test_parser.py  test_pipeline.py  test_reporting.py  test_reporting_golden.py  test_show_raw_output.py  utils.py
(+45 files in other folders)
